--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-router-dom": "^6.15.0",
-    "sqlite3": "^5.1.7"
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.22",
